--- a/metaFinal/src/view/adminPanel/reservation_voyage.fxml
+++ b/metaFinal/src/view/adminPanel/reservation_voyage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -19,7 +20,7 @@
                   <Font size="15.0" />
                </font>
             </TextField>
-            <Label fx:id="Idrv0" layoutX="46.0" layoutY="41.0" text="Idrv">
+            <Label fx:id="Idrv0" layoutX="29.0" layoutY="41.0" text="Idrv">
                <font>
                   <Font name="Microsoft Sans Serif" size="20.0" />
                </font>
@@ -51,9 +52,7 @@
                   <Font size="15.0" />
                </font>
             </Button>
-            <Button fx:id="clear" layoutX="229.0" layoutY="375.0" mnemonicParsing="false" onAction="#clear" prefHeight="46.0" prefWidth="87.0" styleClass="clear-button" stylesheets="@design.css" text="Clear" />
-            <Button fx:id="delete" layoutX="229.0" layoutY="432.0" mnemonicParsing="false" onAction="#delete" prefHeight="46.0" prefWidth="87.0" styleClass="delete-button" stylesheets="@design.css" text="Delete" />
-            <Button fx:id="print" layoutX="19.0" layoutY="432.0" mnemonicParsing="false" onAction="#print" prefHeight="46.0" prefWidth="87.0" styleClass="print-button" stylesheets="@design.css" text="Print" />
+            <Button fx:id="clear" layoutX="112.0" layoutY="429.0" mnemonicParsing="false" onAction="#clear" prefHeight="46.0" prefWidth="87.0" styleClass="clear-button" stylesheets="@design.css" text="Clear" />
             <ComboBox fx:id="idu11" layoutX="96.0" layoutY="212.0" onAction="#comboBox1" onKeyTyped="#textfieldDesign" onMouseClicked="#textfieldDesign" onMouseDragged="#textfieldDesign" prefHeight="31.0" prefWidth="220.0" promptText="Choose..." styleClass="textfield-design" stylesheets="@design.css" />
             <ComboBox fx:id="Idv122" layoutX="96.0" layoutY="272.0" onAction="#comboBox2" onKeyTyped="#textfieldDesign" onMouseClicked="#textfieldDesign" onMouseDragged="#textfieldDesign" prefHeight="31.0" prefWidth="220.0" promptText="Choose..." styleClass="textfield-design" stylesheets="@design.css" />
             <Label fx:id="Idv1" layoutX="30.0" layoutY="276.0" text="Idv ">
@@ -66,16 +65,16 @@
                   <Font name="Microsoft Sans Serif" size="20.0" />
                </font>
             </Label>
-      
-            <TextField fx:id="Date_depart" layoutX="136.0" layoutY="78.0" />
-            <TextField fx:id="Date_arrivee" layoutX="136.0" layoutY="119.0" />
             <TextField fx:id="Refpaiement1" layoutX="136.0" layoutY="320.0" />
+            <DatePicker fx:id="Date_depart" layoutX="136.0" layoutY="78.0" />
+            <DatePicker fx:id="Date_arrivee" layoutX="136.0" layoutY="119.0" />
+            <Button fx:id="delete" layoutX="222.0" layoutY="375.0" mnemonicParsing="false" onAction="#delete" prefHeight="46.0" prefWidth="87.0" styleClass="delete-button" stylesheets="@design.css" text="Delete" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="335.0" prefHeight="500.0" prefWidth="466.0">
+      <AnchorPane layoutX="384.0" prefHeight="513.0" prefWidth="646.0">
          <children>
             <Separator layoutX="11.0" layoutY="14.0" orientation="VERTICAL" prefHeight="475.0" prefWidth="1.0" />
-            <TableView fx:id="table_view" layoutX="57.0" layoutY="25.0" onMouseClicked="#selectData" prefHeight="450.0" prefWidth="619.0">
+            <TableView fx:id="table_view" layoutX="45.0" layoutY="27.0" onMouseClicked="#selectData" prefHeight="450.0" prefWidth="605.0">
               <columns>
                 <TableColumn fx:id="col_id" prefWidth="67.0" text="Idrv" />
                 <TableColumn fx:id="col_date_depart" prefWidth="83.0" text="Date_depart" />
