--- a/metaFinal/src/view/adminPanel/Voyage.fxml
+++ b/metaFinal/src/view/adminPanel/Voyage.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -15,7 +16,7 @@
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
        
-<AnchorPane id="AnchorPane" prefHeight="513.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane fx:id="left_main" id="AnchorPane" prefHeight="513.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
         <VBox layoutX="46.0" layoutY="111.0" prefHeight="157.0" prefWidth="95.0" spacing="25.0">
             <children>
@@ -26,26 +27,26 @@
                 
             </children>
         </VBox>
-        <Button fx:id="bsave" layoutX="59.0" layoutY="303.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
+        <Button fx:id="bsave" layoutX="59.0" layoutY="354.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="154.0" layoutY="303.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
+        <Button fx:id="bupdate" layoutX="154.0" layoutY="354.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="245.0" layoutY="304.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="245.0" layoutY="355.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
             
                                  <font>
                 <Font name="Times New Roman" size="12.0" />
             </font>
             </Button>
             
-              <Button layoutX="342.0" layoutY="304.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
+              <Button layoutX="342.0" layoutY="355.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
@@ -53,7 +54,7 @@
         </Button>
         
         
-        <Button fx:id="blink" layoutX="295.0" layoutY="363.0" mnemonicParsing="false" onAction="#link" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Link">
+        <Button fx:id="blink" layoutX="295.0" layoutY="413.0" mnemonicParsing="false" onAction="#link" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Link">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
@@ -85,7 +86,14 @@
             <children>
                             <TextField fx:id="idv" editable="false" prefHeight="20.0" prefWidth="80.0" />
                             <TextField fx:id="pays" layoutX="10.0" layoutY="10.0" />
-                            <TextField fx:id="image_pays" layoutX="10.0" layoutY="20.0" />
+                        <ImageView fx:id="image_view" fitHeight="98.0" fitWidth="247.0" pickOnBounds="true" preserveRatio="true" />
+                           <Button fx:id="insert_image" layoutX="315.0" layoutY="368.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Upload">
+                     <font>
+                        <Font name="Times New Roman Bold" size="12.0" />
+                     </font>
+                  </Button>
+                                    <Label fx:id="file_path" alignment="CENTER" layoutX="254.0" layoutY="394.0" prefHeight="23.0" prefWidth="199.0" />
+
             </children>
         </VBox>
         
