--- a/metaFinal/src/view/adminPanel/EventList.fxml
+++ b/metaFinal/src/view/adminPanel/EventList.fxml
@@ -1,54 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="515.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.EventListController">
+<VBox prefHeight="465.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.EventListController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
        
-<AnchorPane id="AnchorPane" prefHeight="513.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="503.0" prefWidth="925.0" styleClass="background" stylesheets="@../../../../css/BACK.css" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
-        <VBox layoutX="14.0" layoutY="66.0" prefHeight="289.0" prefWidth="62.0" spacing="25.0">
+        <VBox layoutX="6.0" layoutY="72.0" prefHeight="311.0" prefWidth="61.0" spacing="25.0">
             <children>
                 <Label styleClass="labelform" text="ID" />
                 <Label layoutX="10.0" layoutY="10.0" styleClass="labelform" text="Event Type" />
                 <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Chanteur" />
-                        <Label styleClass="labelform" text="Adresse" />
+                        <Label prefHeight="42.0" prefWidth="43.0" styleClass="labelform" text="Adresse" />
                         <Label styleClass="labelform" text="Event Date" />
                         <Label styleClass="labelform" text="Event Price" />
                         <Label styleClass="labelform" text="Image" />
                 
             </children>
         </VBox>
-        <Button fx:id="bsave" layoutX="3.0" layoutY="432.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
+        <Button fx:id="bsave" layoutX="14.0" layoutY="431.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Save">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="98.0" layoutY="432.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
+        <Button fx:id="bupdate" layoutX="96.0" layoutY="431.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="189.0" layoutY="433.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="181.0" layoutY="431.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Delete">
             
                                  <font>
                 <Font name="Times New Roman" size="12.0" />
             </font>
             </Button>
             
-              <Button layoutX="279.0" layoutY="433.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
+              <Button layoutX="267.0" layoutY="431.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
@@ -68,7 +70,7 @@
         </TableView>
         <Pane layoutX="96.0" layoutY="12.0" prefHeight="39.0" prefWidth="634.0">
             <children>
-                <Label layoutX="238.0" layoutY="1.0" prefHeight="10.0" prefWidth="337.0" text="Gestion des evenements " textFill="#ffc300">
+                <Label layoutX="241.0" layoutY="7.0" prefHeight="10.0" prefWidth="337.0" text="Gestion des evenements " textFill="#ffc300">
                     <font>
                         <Font name="Arial Bold" size="25.0" />
                     </font>
@@ -76,17 +78,23 @@
                 </Label>
             </children>
         </Pane>
-        <VBox layoutX="78.0" layoutY="66.0" prefHeight="275.0" prefWidth="182.0" spacing="15.0">
+        <VBox layoutX="74.0" layoutY="55.0" prefHeight="361.0" prefWidth="234.0" spacing="15.0">
             <children>
-                            <TextField fx:id="Ide" editable="false" prefHeight="20.0" prefWidth="80.0" />
+                            <TextField fx:id="Ide" editable="false" prefHeight="27.0" prefWidth="234.0" />
                             <TextField fx:id="Type_event" layoutX="10.0" layoutY="10.0" />
                             <TextField fx:id="Chanteur" layoutX="10.0" layoutY="20.0" />
                             <TextField fx:id="Adresse" styleClass="field" />
-                            <TextField fx:id="Date_event" prefHeight="26.0" prefWidth="0.0" styleClass="field" />
-                            <TextField fx:id="prix_e" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
-                            <TextField fx:id="image" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
+                        <DatePicker fx:id="Date_event" prefHeight="30.0" prefWidth="232.0" />
+                        <TextField fx:id="prix_e" />
+                        <ImageView fx:id="image_view" fitHeight="58.0" fitWidth="114.0" pickOnBounds="true" preserveRatio="true" />
             </children>
         </VBox>
+                  <Button fx:id="insert_image" layoutX="14.0" layoutY="389.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="11.0" prefWidth="34.0" styleClass="btn" text="...">
+                     <font>
+                        <Font name="Times New Roman Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Label fx:id="file_path" alignment="CENTER" layoutX="369.0" layoutY="408.0" prefHeight="23.0" prefWidth="199.0" />
         
      
     </children>
