--- a/metaFinal/src/view/adminPanel/SponsorList.fxml
+++ b/metaFinal/src/view/adminPanel/SponsorList.fxml
@@ -1,54 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="515.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.SponsorListController">
+<VBox prefHeight="478.0" prefWidth="925.0" styleClass="background" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.SponsorListController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
        
-<AnchorPane id="AnchorPane" prefHeight="513.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="511.0" prefWidth="925.0" styleClass="background" stylesheets="@../../css/BACK.css" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
-        <VBox layoutX="14.0" layoutY="66.0" prefHeight="289.0" prefWidth="62.0" spacing="25.0">
+        <VBox layoutX="5.0" layoutY="83.0" prefHeight="322.0" prefWidth="71.0" spacing="25.0">
             <children>
-                <Label styleClass="labelform" text="ID" />
+                <Label styleClass="labelform" />
                 <Label layoutX="10.0" layoutY="10.0" styleClass="labelform" text="Nom" />
                 <Label layoutX="10.0" layoutY="27.0" prefHeight="17.0" prefWidth="52.0" styleClass="labelform" text="Tel" />
                         <Label styleClass="labelform" text="Email" />
                         <Label styleClass="labelform" text="Date" />
                         <Label styleClass="labelform" text="Prix" />
-                        <Label styleClass="labelform" text="Image" />
+                        <Label prefHeight="49.0" prefWidth="36.0" styleClass="labelform" text="Image" />
                 
             </children>
         </VBox>
-        <Button fx:id="bsave" layoutX="3.0" layoutY="432.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
+        <Button fx:id="bsave" layoutX="17.0" layoutY="450.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Save">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="98.0" layoutY="432.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
+        <Button fx:id="bupdate" layoutX="104.0" layoutY="450.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="189.0" layoutY="433.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="189.0" layoutY="450.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" styleClass="btn" text="Delete">
             
                                  <font>
                 <Font name="Times New Roman" size="12.0" />
             </font>
             </Button>
             
-              <Button layoutX="279.0" layoutY="433.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
+              <Button layoutX="270.0" layoutY="450.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" styleClass="btn" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
@@ -66,7 +68,7 @@
                         <TableColumn fx:id="simage" prefWidth="106.0" text="Image" />
             </columns>
         </TableView>
-        <Pane layoutX="96.0" layoutY="12.0" prefHeight="39.0" prefWidth="634.0">
+        <Pane layoutX="104.0" layoutY="14.0" prefHeight="39.0" prefWidth="634.0">
             <children>
                 <Label layoutX="238.0" layoutY="1.0" prefHeight="10.0" prefWidth="337.0" text="Gestion des sponsors " textFill="#ffc300">
                     <font>
@@ -76,17 +78,24 @@
                 </Label>
             </children>
         </Pane>
-        <VBox layoutX="78.0" layoutY="66.0" prefHeight="275.0" prefWidth="182.0" spacing="15.0">
+        <VBox layoutX="52.0" layoutY="59.0" prefHeight="322.0" prefWidth="249.0" spacing="15.0">
             <children>
-                            <TextField fx:id="ids" editable="false" prefHeight="20.0" prefWidth="80.0" />
-                            <TextField fx:id="nomsponsor" layoutX="10.0" layoutY="10.0" />
+                            <TextField fx:id="ids" editable="false" prefHeight="0.0" prefWidth="249.0" />
+                            <TextField fx:id="nomsponsor" layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="182.0" />
                             <TextField fx:id="tel" layoutX="10.0" layoutY="20.0" />
                             <TextField fx:id="email" styleClass="field" />
-                            <TextField fx:id="date_sp" prefHeight="26.0" prefWidth="0.0" styleClass="field" />
-                            <TextField fx:id="prix_sp" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
-                            <TextField fx:id="image" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
+                        <DatePicker prefHeight="35.0" prefWidth="250.0" />
+                            <TextField fx:id="prix_sp" prefHeight="20.0" prefWidth="249.0" styleClass="field" />
             </children>
         </VBox>
+                  <ImageView fitHeight="61.0" fitWidth="81.0" layoutX="76.0" layoutY="370.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button fx:id="insert_image" layoutX="14.0" layoutY="400.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="17.0" prefWidth="34.0" styleClass="btn" text="...">
+                     <font>
+                        <Font name="Times New Roman Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Label layoutX="14.0" layoutY="66.0" prefHeight="17.0" prefWidth="26.0" text="ID" />
+                  <Label fx:id="file_path" alignment="CENTER" layoutX="479.0" layoutY="452.0" prefHeight="23.0" prefWidth="199.0" />
         
      
     </children>
