--- a/metaFinal/src/view/hotel/HotelList.fxml
+++ b/metaFinal/src/view/hotel/HotelList.fxml
@@ -11,14 +11,14 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="pane " prefHeight="571.0" prefWidth="1003.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.HotelListController">
+<AnchorPane fx:id="left_main" prefHeight="571.0" prefWidth="1003.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.HotelListController">
    <children>
       <TableView fx:id="tab_hotel" layoutX="467.0" layoutY="121.0" onMouseClicked="#tablehandleButtonAction" prefHeight="299.0" prefWidth="536.0">
          <columns>
-            <TableColumn  fx:id="id_hotel_tab" prefWidth="112.0" text="Id hotel" />
-            <TableColumn  fx:id="nom_tab" prefWidth="92.0" text="Nom hotel" />
-            <TableColumn  fx:id="nb_etoile_tab" prefWidth="126.0" text="Nombre etoile" />
-            <TableColumn  fx:id="adre_tab" prefWidth="108.0" text="Adresse" />
+            <TableColumn fx:id="id_hotel_tab" prefWidth="112.0" text="Id hotel" />
+            <TableColumn fx:id="nom_tab" prefWidth="92.0" text="Nom hotel" />
+            <TableColumn fx:id="nb_etoile_tab" prefWidth="126.0" text="Nombre etoile" />
+            <TableColumn fx:id="adre_tab" prefWidth="108.0" text="Adresse" />
             <TableColumn fx:id="image_tab" prefWidth="75.0" text="Image " />
          </columns>
       </TableView>
@@ -30,23 +30,22 @@
       <TextField fx:id="Adresse" layoutX="131.0" layoutY="292.0" />
       <Label layoutX="81.0" layoutY="143.0" styleClass="labelform" text="ID" />
       <TextField fx:id="Idh" layoutX="131.0" layoutY="138.0" />
-      <Button fx:id="delete" layoutX="189.0" layoutY="475.0" mnemonicParsing="false" onAction="#DeleteHotel" prefHeight="33.0" prefWidth="71.0" text="Delete">
+      <Button fx:id="delete" layoutX="189.0" layoutY="501.0" mnemonicParsing="false" onAction="#DeleteHotel" prefHeight="33.0" prefWidth="71.0" text="Delete">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="bsave1" layoutX="303.0" layoutY="475.0" mnemonicParsing="false" onAction="#EditHotel" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Edit">
+      <Button fx:id="bsave1" layoutX="304.0" layoutY="501.0" mnemonicParsing="false" onAction="#EditHotel" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Edit">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="bsave11" layoutX="89.0" layoutY="475.0" mnemonicParsing="false" onAction="#SaveHotel" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
+      <Button fx:id="bsave11" layoutX="89.0" layoutY="501.0" mnemonicParsing="false" onAction="#SaveHotel" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
          <font>
             <Font name="Times New Roman Bold" size="12.0" />
          </font>
       </Button>
-      <Button layoutX="47.0" layoutY="389.0" mnemonicParsing="false" onAction="#BrowseImage" text="Browse" />
-      <TextField  fx:id="image" layoutX="145.0" layoutY="389.0" prefHeight="31.0" prefWidth="269.0" promptText="Path" />
+      <Button fx:id="insert_image" layoutX="35.0" layoutY="379.0" mnemonicParsing="false" onAction="#insert_image" text="Browse" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#747a80" height="87.0" layoutX="-4.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" width="1026.0" />
       <Label layoutX="324.0" layoutY="29.0" prefHeight="10.0" prefWidth="337.0" text="Gestion Hotel" textFill="#00d1ff">
          <font>
@@ -58,5 +57,8 @@
             <Image url="@../../../../../../Desktop/nayrouz/metaFinal/build/classes/view/img/logo_meta.png" />
          </image>
       </ImageView>
+      <Label layoutX="20.0" layoutY="345.0" text="choisir une image " textFill="#555555" />
+      <ImageView fx:id="image_view" fitHeight="135.0" fitWidth="187.0" layoutX="260.0" layoutY="343.0" pickOnBounds="true" preserveRatio="true" />
+          <Label fx:id="file_path" alignment="CENTER" layoutX="15.0" layoutY="429.0" prefHeight="23.0" prefWidth="199.0" />
    </children>
 </AnchorPane>
