--- a/metaFinal/src/view/PartieClient/Reservation_VoyageClient.fxml
+++ b/metaFinal/src/view/PartieClient/Reservation_VoyageClient.fxml
@@ -1,11 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="693.0" prefWidth="1169.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+   <children>
+      <DatePicker layoutX="912.0" layoutY="290.0" />
+      <DatePicker layoutX="585.0" layoutY="290.0" />
+      <AnchorPane layoutX="-12.0" layoutY="-14.0" prefHeight="722.0" prefWidth="512.0" style="-fx-background-color: #073258;">
+         <children>
+            <Label layoutX="103.0" layoutY="431.0" prefHeight="50.0" prefWidth="395.0" text="Reserver votre voyage" textFill="#fcfcfc">
+               <font>
+                  <Font size="34.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="307.0" fitWidth="330.0" layoutX="91.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../login_signup/272896551_284823900301309_6294383665325954873_n.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <TextField fx:id="Email" layoutX="555.0" layoutY="153.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <TextField fx:id="Email1" layoutX="555.0" layoutY="411.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <TextField fx:id="Email2" layoutX="912.0" layoutY="137.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <TextField fx:id="Email3" layoutX="912.0" layoutY="411.0" prefHeight="28.0" prefWidth="277.0" promptText="Email" style="-fx-border-color: #073258; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
+      <Button fx:id="submitButton" contentDisplay="CENTER" defaultButton="true" layoutX="778.0" layoutY="563.0" mnemonicParsing="false" onAction="#signup" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #073258;" text="Sign Up" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="Akhbar MT" size="18.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
