BD -CSV-CRUD VOY_ORG

--- a/metaFinal/src/view/adminPanel/UserList.fxml
+++ b/metaFinal/src/view/adminPanel/UserList.fxml
@@ -13,12 +13,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="671.0" prefWidth="1166.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.UserListController">
+<VBox prefHeight="671.0" prefWidth="1222.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.UserListController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
          <children>
        
-            <AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="697.0" prefWidth="1166.0">
+            <AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="598.0" prefWidth="1205.0">
       <children>
         <VBox layoutX="15.0" layoutY="16.0" prefHeight="157.0" prefWidth="62.0" spacing="25.0">
             <children>
@@ -41,7 +41,7 @@
                     </VBox>
             
                       
-            <Button fx:id="bsave" layoutY="564.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
+            <Button fx:id="bsave" layoutY="564.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-background-color: lightblue;" styleClass="btn" text="Save">
             
                       
                  
@@ -50,20 +50,20 @@
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             </Button>
-            <Button fx:id="bupdate" layoutX="95.0" layoutY="564.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
+            <Button fx:id="bupdate" layoutX="96.0" layoutY="564.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-background-color: #6DF0AB;" text="Edit">
             
                            <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             </Button>
-            <Button fx:id="bdelete" layoutX="186.0" layoutY="565.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="186.0" layoutY="565.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-background-color: #FF4D4D;" styleClass="btn" text="Delete">
             
                                                    <font>
                 <Font name="Times New Roman" size="12.0" />
             </font>
             </Button>
             
-                                <Button layoutX="276.0" layoutY="565.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
+                                <Button layoutX="276.0" layoutY="565.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-background-color: lightgray;" styleClass="btn" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
@@ -72,10 +72,10 @@
             
             
                         
-           <TableView fx:id="table" layoutX="439.0" layoutY="51.0" onMouseClicked="#tablehandleButtonAction" prefHeight="399.0" prefWidth="659.0">
+           <TableView fx:id="table" layoutX="438.0" layoutY="125.0" onMouseClicked="#tablehandleButtonAction" prefHeight="315.0" prefWidth="751.0">
             <columns>
-                <TableColumn fx:id="uidu" prefWidth="33.0" text="ID" />
-                <TableColumn fx:id="ucin" prefWidth="82.33331298828125" text="CIN" />
+                <TableColumn fx:id="uidu" prefWidth="59.0" text="ID" />
+                <TableColumn fx:id="ucin" prefWidth="129.00003051757812" text="CIN" />
                 <TableColumn fx:id="unom" prefWidth="49.66668701171875" text="NOM" />
                 <TableColumn fx:id="uprenom" prefWidth="60.999969482421875" text="Prenom" />
                         <TableColumn fx:id="utel" prefWidth="68.0" text="Tel" />
@@ -83,6 +83,9 @@
                         <TableColumn fx:id="udateNaissance" prefWidth="102.6666259765625" text="DateNaissance" />
                         <TableColumn fx:id="uimage" prefWidth="85.3333740234375" text="Image" />
             </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
         </TableView>
         <Pane layoutX="96.0" layoutY="12.0" prefHeight="39.0" prefWidth="634.0">
             <children>
@@ -102,8 +105,8 @@
                             <TextField fx:id="prenom" styleClass="field" />
                             <TextField fx:id="tel" prefHeight="26.0" prefWidth="0.0" styleClass="field" />
                             <TextField fx:id="email" prefHeight="0.0" prefWidth="56.0" styleClass="field" />
-                        <PasswordField fx:id="password" styleClass="field"/>
-                        <DatePicker fx:id="dateNaissance" prefHeight="28.0" prefWidth="180.0"  promptText="dateNaissance"/>
+                        <PasswordField fx:id="password" styleClass="field" />
+                        <DatePicker fx:id="dateNaissance" prefHeight="28.0" prefWidth="180.0" promptText="dateNaissance" />
             </children>
         </VBox>
           
@@ -115,6 +118,11 @@
                   </Button>
         
                   <Label fx:id="file_path" alignment="CENTER" layoutX="254.0" layoutY="394.0" prefHeight="23.0" prefWidth="199.0" />
+                  <Button fx:id="importCS" layoutX="1016.0" layoutY="62.0" mnemonicParsing="false" onAction="#importCSV" prefHeight="33.0" prefWidth="124.0" style="-fx-background-color: #11BD33;" styleClass="btn" text="Import Data to DB">
+                     <font>
+                        <Font name="Times New Roman Bold" size="12.0" />
+                     </font>
+                  </Button>
       </children>
       </AnchorPane>
          </children>
