--- a/metaFinal/src/view/adminPanel/VoyageORG.fxml
+++ b/metaFinal/src/view/adminPanel/VoyageORG.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -10,45 +11,46 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="456.0" prefWidth="1156.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.VoyageORGController">
+<VBox prefHeight="644.0" prefWidth="1340.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.VoyageORGController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
        
-<AnchorPane id="AnchorPane" prefHeight="513.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="636.0" prefWidth="1340.0" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
         <VBox layoutX="35.0" layoutY="82.0" prefHeight="157.0" prefWidth="95.0" spacing="25.0">
             <children>
                 <Label styleClass="labelform" text="IDV_ORG" />
                 <Label layoutX="10.0" layoutY="10.0" styleClass="labelform" text="Prix Billet" />
                 <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Campagnie " />
-                  <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Status" />
-                    <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Voyage" />
+                  <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Nb nuits" />
+                    <Label layoutX="10.0" layoutY="27.0" styleClass="labelform" text="Status" />
+                        <Label styleClass="labelform" text="Voyage" />
               
                    
                 
             </children>
         </VBox>
-        <Button fx:id="bsave" layoutX="42.0" layoutY="369.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Save">
+        <Button fx:id="bsave" layoutX="42.0" layoutY="381.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-background-color: lightblue;" styleClass="btn" text="Save">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="137.0" layoutY="369.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" text="Edit">
+        <Button fx:id="bupdate" layoutX="137.0" layoutY="381.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-background-color: #d8e841;" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="228.0" layoutY="370.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="228.0" layoutY="382.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-background-color: #d85a41;" styleClass="btn" text="Delete">
             
                                  <font>
                 <Font name="Times New Roman" size="12.0" />
             </font>
             </Button>
             
-              <Button layoutX="325.0" layoutY="370.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="btn" text="Reset">
+              <Button layoutX="325.0" layoutY="382.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-background-color: lightgray;" styleClass="btn" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
@@ -69,19 +71,32 @@
                             <TextField fx:id="idvo" editable="false" prefHeight="20.0" prefWidth="80.0" />
                             <TextField fx:id="prix_billet" layoutX="10.0" layoutY="10.0" />
                             <TextField fx:id="airline" layoutX="10.0" layoutY="20.0" />
-                             <TextField fx:id="Nb_nuitees" layoutX="10.0" layoutY="20.0" />
-                              <TextField fx:id="etatVoyage" layoutX="10.0" layoutY="20.0" />
+                             <TextField fx:id="nb_nuitees" layoutX="10.0" layoutY="20.0" />
+                            
+                        <ComboBox fx:id="etatVoyage" onAction="#comboBox" onKeyTyped="#textfieldDesign" onMouseClicked="#textfieldDesign" onMouseDragged="#textfieldDesign" prefHeight="31.0" prefWidth="241.0" promptText="Choisir la disponibilité" />
+                        <ComboBox fx:id="Idv" onAction="#comboBox1" onKeyTyped="#textfieldDesign" onMouseClicked="#textfieldDesign" onMouseDragged="#textfieldDesign" prefHeight="31.0" prefWidth="241.0" promptText="Choisir l'ID voyage" />
             </children>
         </VBox>
-                  <TableView layoutX="478.0" layoutY="71.0" prefHeight="289.0" prefWidth="661.0">
+                  <TableView fx:id="table_view" editable="true" layoutX="507.0" layoutY="132.0" onMouseClicked="#selectData" prefHeight="196.0" prefWidth="793.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="IDV_ORG" />
-                      <TableColumn prefWidth="162.0" text="Prix_Billet" />
-                        <TableColumn prefWidth="205.0" text="Campagnie" />
-                        <TableColumn prefWidth="82.0" text="Status" />
-                        <TableColumn prefWidth="136.0" text="Voyage" />
+                      <TableColumn fx:id="uidvo" prefWidth="78.0" text="IDV_ORG" />
+                      <TableColumn fx:id="uPrix_billet" prefWidth="186.0" text="Prix_Billet" />
+                        <TableColumn fx:id="uAirline" prefWidth="205.0" text="Campagnie" />
+                        <TableColumn fx:id="uNb_nuitees" prefWidth="104.0" text="Nb nuitées" />
+                        <TableColumn fx:id="uetatVoyage" prefWidth="161.0" text="Status" />
+                        <TableColumn fx:id="uIdv" prefWidth="102.0" text="ID Voyage" />
                     </columns>
+                     
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
+                  <Label layoutX="862.0" layoutY="62.0" styleClass="labelform" text="Chercher">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="idvo1" editable="false" layoutX="947.0" layoutY="59.0" prefHeight="31.0" prefWidth="124.0" promptText="Taper une clé" />
         
      
     </children>
