--- a/metaFinal/src/view/login_signup/login.fxml
+++ b/metaFinal/src/view/login_signup/login.fxml
@@ -32,7 +32,7 @@
             <ImageView fitHeight="196.0" fitWidth="220.0" layoutX="126.0" layoutY="158.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fitHeight="283.0" fitWidth="235.0" layoutX="119.0" layoutY="158.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                 <Image url="@../img/logo_meta.png" />
+                  <Image url="@../img/logo_meta.pngs" />
                </image>
             </ImageView>
          </children>
